src/components/FormBuilderNav/FormBuilderNav.scss
@import './mixins';
@import './variables';

.FormBuilderNavWrapper {
  background-color: #fff;
  margin: 0;
  padding: 0 25px;
  line-height: $dashboard-tabs-height;
  font-size: 14px;
  font-family: "roble_alt_boldbold";
  position: relative;
}

.breadcrumbs {
  display: table-cell;
  left: 25px;
  width: 25%;
  color: $grey;
}
.crumbDivider {
  margin: 0 5px;
}
.homeLink {
  color: $grey;
  cursor: pointer;
}
.formTitle {
  color: #848c98;
  vertical-align: middle;
  display: inline-block;
  width: calc(100% - 50px);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.actions {
  display: table-cell;
  right: 25px;
  text-align: right;
  width: 25%;
  min-width: 280px;
  button {
    margin-left: 10px;
  }
  button:first-of-type {
    margin-left: 0;
  }
  @include media('<lg') {
    .prev, .next {
      display: none;
    }
  }
}

.formStepsNav {
  z-index: 10;
  display: table-cell;
  position: relative;
  margin: 0 25%;
  padding: 0;
  list-style-type: none;
  text-align: center;
  li {
    display: inline-block;
    margin: 0 10px;
  }
  a {
    font-family: "roble_alt_boldbold";
    color: $grey;
    text-decoration: none;
    cursor: pointer;
    .stepNum {
      display: inline-block;
      width: 1.8em;
      height: 1.8em;
      line-height: 1.8em;
      text-align: center;
      @include border-radius(50%);
      margin-right: 5px;
      background: lighten($grey, 15%);
      color: $grey;
    }
    &:focus, &:hover, &:active {
      background: none !important;
      outline: none;
    }
  }
  .active a {
    background: none !important;
    color: $blue;
    .stepNum {
      background: $blue;
      color: $white;
    }
  }
  @include media('<md') {
    li {
      margin: 0 5px;
      .stepNum {
        margin-right: 2px;
      }
    }
  }
  @include media('<sm') {
    .stepLabel { display: none; }
    .active .stepLabel { display: inline-block; }
  }
}

